--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
+    "wwjs-stable-client": "^1.0.4"
   }
 }
